[#61] feat: robotAPI 문서화
